Fix markup on small screens

--- a/src/widgets/distribution-form/ui/distribution-form/distribution-form.module.scss
+++ b/src/widgets/distribution-form/ui/distribution-form/distribution-form.module.scss
@@ -3,4 +3,5 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    flex-wrap: wrap;
 }
